--- a/index.html
+++ b/index.html
@@ -209,10 +209,10 @@
                 <div class="footer-section">
                     <h4>Contact Us</h4>
                     <div class="contact-info">
-                        <p><i class="fas fa-school"></i> Springfield High School</p>
-                        <p><i class="fas fa-map-marker-alt"></i> 123 Education Lane, Springfield</p>
-                        <p><i class="fas fa-envelope"></i> interact@springfield.edu</p>
-                        <p><i class="fas fa-phone"></i> (555) 123-4567</p>
+                        <p><i class="fas fa-school"></i> Haile Manas Academy</p>
+                        <p><i class="fas fa-map-marker-alt"></i>2 km north of dashen brewery</p>
+                        <p><i class="fas fa-envelope"></i>interact@springfield.edu</p>
+                        <p><i class="fas fa-phone"></i> (+251) 9000-0000</p>
                     </div>
                     <div class="social-links">
                         <a href="#"><i class="fab fa-facebook-f"></i></a>
@@ -226,7 +226,7 @@
                     <h4>Stay Updated</h4>
                     <p>Subscribe to our newsletter to receive updates on our projects, events, and impact.</p>
                     <form class="newsletter-form">
-                        <input type="email" placeholder="Your Email">
+                        <input type="email" placeholder="example@gmail.com">
                         <button class="subscribe-button">Subscribe</button>
                     </form>
                 </div>
