--- a/about.html
+++ b/about.html
@@ -40,7 +40,7 @@
       <div class="projects-grid">
         <div class="project-card">
           <div class="card-image">
-            <img src="https://picsum.photos/400/200" alt="Project 1"><!-- Feature 7: Images -->
+            <img src="P1.jpeg" alt="Project 1"><!-- Feature 7: Images -->
           </div>
           <div class="card-content">
             <h4>Book Drive</h4>
